For some reason div#content was chopping off the bottom bit.  Setting overflow:hidden seems to fix for some reason. [#131]

--- a/public/stylesheets/home_exposure.css
+++ b/public/stylesheets/home_exposure.css
@@ -89,6 +89,9 @@ div#content_wrapper {
 div#content {
 	padding: 5px 25px;
 	font-size: 10pt;
+
+	/* don't know why */
+	overflow:hidden;
 }
 
 div#preview {
